Fixed alignment of header in mobile layout

--- a/site/css/kbp-global.css
+++ b/site/css/kbp-global.css
@@ -56,6 +56,10 @@ header h1 span {
 	padding-right: .5em;
 }
 
+header h1 a {
+	text-decoration: none;
+}
+
 #navToggle {
 	display: none;
 }
